traces/bug_508.txt
examples++-load/Curvature.cpp:523: error: DEAD_STORE
  The value written to &nv (type int) is never used.
Showing all 1 steps of the trace


examples++-load/Curvature.cpp:523:5: Write of unused value
521.       double l[2];
522.       double m[3]={a11,a12,a22};
523.       int nv=eigen2(m,l,vp);
           ^
524.       return l[0];
525.   }
